RESOLVED FIXED143061
Fix formatting in BuiltinExecutables
https://bugs.webkit.org/show_bug.cgi?id=143061
Summary Fix formatting in BuiltinExecutables
Joseph Pecoraro
Reported 2015-03-25 14:54:16 PDT
* SUMMARY Fix formatting in BuiltinExecutables.
Attachments
[PATCH] Proposed Fix (1.36 KB, patch)
2015-03-25 14:54 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2015-03-25 14:54:58 PDT
Created attachment 249432 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 2 2015-03-25 15:43:28 PDT
Comment on attachment 249432 [details] [PATCH] Proposed Fix Clearing flags on attachment: 249432 Committed r181976: <http://trac.webkit.org/changeset/181976>
WebKit Commit Bot
Comment 3 2015-03-25 15:43:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.