Fix formatting in BuiltinExecutables https://bugs.webkit.org/show_bug.cgi?id=143061

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-03-25
Reviewed by Ryosuke Niwa.

* builtins/BuiltinExecutables.cpp:
(JSC::BuiltinExecutables::createExecutableInternal):

Canonical link: https://commits.webkit.org/161085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181976 268f45cc-cd09-0410-ab3c-d52691b4dbfc